# ExactCIs

./: .coverage.Chey-MacBook-Air.local.10386.XIMxFNbx.c  .gitignore  .output.txt  .windsurfrules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION_CLEANUP.md  FINAL_TEST_STATUS.md  MANIFEST.in  Makefile  MidP_Critical_Analysis_Report.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_IMPROVEMENT_SUMMARY.md  PROJECT_STATUS.md  RECENT_FIXES_SUMMARY.md  RelativeRisk_Testing_Diagnostic_Summary.md  TEST_STATUS.md  VECTORIZATION_IMPROVEMENTS_SUMMARY.md  all_method_comparison.csv  analysis_midp_large_counts.py  blaker_optimization_plan.md  ci_method_comparator.py  ci_test.py  ci_test_improved.py  cleanup_plan.md  code.py  comparison_output.txt  complete_test.py  comprehensive_test.py  conditional_optimization_plan.md  debug_blaker_script.py  debug_wald.py  demonstrate_midp_bug.py  documentation_cleanup_summary.md  documentation_reorganization.md  documentation_review_report.md  documentation_update_summary.md  extreme_table_comparison.csv  final_fixes.md  (+44 more)
.agent_guidelines/: guidelines_concurrency.md  persona_concurrency.md  persona_meta_auditor.md  persona_meta_implementor.md  report-concurrency.md
.devplans/: README.md  accuracy_review.md  current_priorities.md  final_dev_tasks.md  golden_parity_plan.md  implementation_roadmap.md  legacy_cleanup_roadmap.md  phase1_core_solvers_plan.md  phase3_ci_inversion_engine.md  phase3_mathematical_core.md  phase4_method_registry.md  planned_expansion.md  precompute_and_gpu_plan.md  refactor_plan.md  refactoring_summary.md  review.md  social_media_research.md
.devtasks/: ANALYSIS_REPORT.md  midp_interval.md  refactoring_and_performance.md
.gemini/: audit_report.md  deep_dive_audit_report.md  guidelines.md
.github/: github_workflows_persona.md
.junie/: guidelines.md
analysis/: README.md  blaker_findings.md  claude_blaker_diagnostics.md  comparison_methods.py  comprehensive_outlier_test.py  junie_blaker_method_investigation.md  quick_sense_check_test.py  test_blaker_debug_case.py
analysis_scripts/: compare_all_methods.py  compare_methods.py  comprehensive_comparison.py  implementation_comparison.py  optimize_unconditional.py  profile_slow_functions.py  profile_with_timeout.py  simplified_comparison.py  surgical_comparison.py
benchmarks/: benchmark_parallel_improvements.py
code_review/: code_review.md
docs/: README.md  api_reference.md  comparison_analysis_summary.md  conversion_test_matrix.md  development_guide.md  documentation_maintenance_guide.md  implementation_comparison.md  index.md  methodology.md  project_description.md  version_management_strategy.md
docs_md/: README.md  SUMMARY.md  api-reference.md
examples/: test_ci_methods.py  timeout_example_updated.md
optimization_results/: unconditional_optimization_20250505_213022.json
(+217 files in other folders)
